# vitaSnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  credits.md
font/: splash.txt
sce_sys/livearea/contents/: template.xml
src/: buttons.cpp  buttons.hpp  collectable.cpp  collectable.hpp  game.cpp  game.hpp  global.cpp  global.hpp  global.hpp~RF66e8dc6c.TMP  main.cpp  menu.cpp  menu.hpp  options.cpp  options.hpp  particle.cpp  particle.hpp  player.cpp  player.hpp  stats.cpp  stats.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp
